--- a/src/alpha/langs/lang.et.json
+++ b/src/alpha/langs/lang.et.json
@@ -194,8 +194,8 @@
     "chatcustomizations":"Vestlus kohandused",
     "commands":"Jututuba käsud",
     "customcss":"Kohandatud CSS",
-    "lowlagMode":"Low Lag Mode",
-    "workMode":"Work Mode"
+    "lowlagMode":"Madal Lag Režiim",
+    "workMode":"Töö Režiim"
   },
   "vote":{
     "meh":"Kehv lugu",
