--- a/src/alpha/langs/lang.ms.json
+++ b/src/alpha/langs/lang.ms.json
@@ -194,8 +194,8 @@
     "chatcustomizations":"Penyesuaian Chat",
     "commands":"Perintah chat",
     "customcss":"Kustom CSS",
-    "lowlagMode":"Low Lag Mode",
-    "workMode":"Work Mode"
+    "lowlagMode":"Mod Lag Rendah",
+    "workMode":"Mod Kerja"
   },
   "vote":{
     "meh":"Meh",
