--- a/src/release/langs/lang.en.json
+++ b/src/release/langs/lang.en.json
@@ -6,12 +6,10 @@
         "disable": "Disable AFK Autorespond to chat",
         "nextIn": "Next AFK Autorespond will be sent from %1",
         "next": "AFK Autorespond on next mention",
-        "commandDisable": "%1 AFK message disabled",
-        "commandNotEnabled": "%1 AFK message was not enabled"
+        "commandDisable": "%1 AFK message disabled"
     },
     "autojoin": {
-        "commandDisable": "%1 autojoin disabled",
-        "commandNotEnabled": "%1 autojoin was not enabled"
+        "commandDisable": "%1 autojoin disabled"
     },
     "fullscreen": {
         "shrink": "Shrink",
@@ -85,13 +83,14 @@
         "joinTime": "If you join the waitlist now, you would be DJing in about %1!"
     },
     "notify": {
-        "header": "Chat Notifications",
+        "deletedMessages": "deleted by ",
         "join": "User Join",
         "leave": "User Leave",
         "grab": "User Grab",
         "meh": "User Mehs",
         "stats": "Song Stats",
         "updates": "Song Updates",
+        "updatesLink": "Song Link",
         "history": "Songs in history",
         "songUnavailable": "Song Unavailable",
         "boothAlert": "Booth Alert (%1 / 50)",
@@ -169,6 +168,11 @@
         "infoHeaderCredits": "This room is using special settings by %1",
         "infoDisable": "You can disable them in the menu"
     },
+    "menuHeaders": {
+        "features": "Features",
+        "chatnotifs": "Chat Notifications",
+        "controlpanel": "Control Panel"
+    },
     "menu": {
         "autowoot": "Autowoot",
         "autojoin": "Autojoin",
@@ -184,7 +188,14 @@
         "controlpanel": "Control Panel",
         "showdeletedmessages": "Show Deleted Messages",
         "visualizers": "RCS SoundCloud Visualizers",
-        "inlineuserinfo": "Inline User Info"
+        "inlineuserinfo": "Inline User Info",
+        "about": "About plugCubed",
+        "background": "Change background",
+        "chatcustomizations": "Chat Customizations",
+        "commands": "Chat commands",
+        "customcss": "Custom CSS",
+        "lowlagMode": "Low Lag Mode",
+        "workMode": "Work Mode"
     },
     "vote": {
         "meh": "Meh",
@@ -193,13 +204,49 @@
         "undecided": "Undecided",
         "djing": "DJing"
     },
+    "customchatcolors": {
+        "userRanksHeader": "User Ranks",
+        "chatnotifs": "Chat Notifications"
+    },
+    "panels": {
+        "about": {
+            "header": "Information about plug³",
+            "version": "Version",
+            "website": "Website",
+            "websiteText": "plug&#179; Website",
+            "translations": "Translations",
+            "translationsText": "plug&#179; Translations",
+            "websitetranslationsText": "plug&#179; Website Translations"
+        },
+        "background": {
+            "description": "Set your own room background"
+        },
+        "buttons": {
+            "cancel": "Cancel",
+            "clear": "Clear",
+            "submit": "Submit"
+        },
+        "chatcustomizations": {
+            "description": "Customize your chat with emojis, notifications, markdown, and other features",
+            "mentionSoundTitle": "Mention Sound %1",
+            "emotesHeader": "Emotes",
+            "chatenhancementHeader": "Chat Enhancements",
+            "emotesSetHeader": "Emoji Set"
+        },
+        "customcss": {
+            "description": "Set your own room CSS"
+        }
+    },
     "tooltip": {
         "stream": "Toggle Video/Audio Stream",
         "clear": "Clear Chat",
         "afk": "AFK Message",
         "reset": "Reset to default",
         "muted": "All songs are muted",
-        "mutedOnce": "Current song is muted"
+        "mutedOnce": "Current song is muted",
+        "quickBan": "Ban user forever",
+        "quickMute": "Mute user for 45 mins",
+        "userInfo": "User Info"
     },
     "error": {
         "userNotFound": "User not found",
@@ -215,5 +262,11 @@
         "noPlaylistsFound": "No playlists found",
         "yourActivePlaylistIsFull": "Your active playlist is full",
         "noNextSong": "You have no queued song"
+    },
+    "video": {
+        "show": "Show",
+        "hide": "Hide",
+        "menushow": "Show Video",
+        "menuhide": "Hide Video"
     }
 }
